    - Made beginner error checks report the line where an error was located (SEWI)
    - Fixed: Syntax checker now only shows errors from current file (SEWI)
    - padre --version displays a MessageBox under wperl.exe (AZAWAWI)
    - Option to continue on beginner errors (SEWI)
    - Made title bar configurable (SEWI)
    - Autocomplete on every char (enable it in the preferences) (SEWI)

0.47 2009.09.25
    - Bundled more Perl Operators documentation [perlopref.pod] (AZAWAWI, COWENS)
    - Fixed crash when inserting a special value without any document (AZAWAWI)
    - Improved StatusBar - speed (SEWI)
    - Fixed ticket #573 ESC does not close About window (AZAWAWI)
    - Fixed ticket #578 Padre's Splash screen should not get in the way (AZAWAWI)
    - Fixed ticket #579 Commenting/uncommenting comments the last unselected 
      line (AZAWAWI)
    - Fixed ticket #576 common (beginner) error check has no feedback if no
      errors found (AZAWAWI)
    - Added Padre::File as a API for all operations on edited files (SEWI)
    - Added 13-eol.t to detect non-UNIX EOL-ed files in Padre (AZAWAWI)
    - Added "Open URL" menu option (SEWI)
    - Added Padre::File::HTTP (SEWI)
    - No more "WIN32" as a line ending indicator only "WIN" (AZAWAWI)
    - The status bar provides more space to display longer mime-type names (AZAWAWI)
    - The status bar reflects now the current document's line endings as
      follows (AZAWAWI):
        - WIN (CR/LF), MAC (CR), UNIX (LF)
        - Mixed, a mixture of the above which is usually an error
        - None which is a one-liner/empty script
    - Beautified the about dialog so that it is includes the splash image. (AZAWAWI)
    - Fixed ticket #589 Pasting in a UNIX document in win32 corrupts it to
      MIXEd (AZAWAWI)
    - Added more beginner-error-checks (SEWI)
    - Improved Perl menu to be more consistent (AZAWAWI)
    - Fixed ticket #504 and ticket #586 which are basically about being able to