@@ -39,6 +39,8 @@ Changes for Perl Application Development and Refactoring Environment
     - Option to continue on beginner errors (SEWI)
     - Made title bar configurable (SEWI)
     - Autocomplete on every char (enable it in the preferences) (SEWI)
+    - Add logfile so the developer debugger of padre will print there
+      and not on STDERR. (SZABGAB)
 
 0.47 2009.09.25
     - Bundled more Perl Operators documentation [perlopref.pod] (AZAWAWI, COWENS)
